webapp/src/components/AuctionPage/AuctionPage.css
.AuctionPage {
  padding-top: 0px !important;
}

.AuctionPage .subtitle {
  color: var(--gray);
  margin-bottom: 5px;
}

.AuctionPage .information-block .subtitle {
  text-transform: uppercase;
}

.AuctionPage .parcel-preview {
  height: 400px;
}

.AuctionPage .auction-details {
  margin: 30px 0;
}

.AuctionPage .information-blocks {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.AuctionPage .information-block {
  position: relative;
}

.AuctionPage .information-block .ui.header {
  margin-top: 0;
}

.AuctionPage .description {
  font-size: 18px;
  margin: 15px 0 0;
}

.AuctionPage .auction-panel {
  border-radius: 8px;
  border: 2px solid var(--outline);
}

.AuctionPage .empty-parcels-message {
  padding: 22px 24px 22px;
  color: var(--gray);
}

.AuctionPage .auction-details .parcels-included-parcels.column {
  display: flex;
  flex-wrap: wrap;
}

.AuctionPage .parcels-included {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  padding: 16px 24px 0;
}

.AuctionPage .ui.warning.message {
  margin-bottom: 20px;
}

.AuctionPage .parcels-included .ParcelCoord {
  margin-right: 16px;
  margin-bottom: 16px;
}

.AuctionPage .ParcelCoord.has-status .attribute {
  border-color: var(--gray);
  color: var(--gray);
}

.AuctionPage footer {
  padding: 16px 24px;
  border-top: 2px solid var(--outline);
  color: var(--gray);
}

.AuctionPage footer .available-parcels {
  margin-right: 20px;
}

.AuctionPage footer .footer-left .link {
  text-transform: uppercase;
  font-weight: 500;
}

.AuctionPage footer {
  display: flex;
  justify-content: space-between;
}

.AuctionPage .bid-wrapper {
  display: flex;
  align-items: center;
}

.AuctionPage .bid-wrapper .ui.button {
  min-width: 144px;
}
.AuctionPage .bid-wrapper {
  background-color: var(--dark-gray);
  padding: 12px 16px;
  border-radius: 10px;
}
.AuctionPage .bid-wrapper .information-block {
  margin: 0;
  flex-grow: 1;
}

.AuctionPage .bid-wrapper .information-block + .information-block {
  margin-left: 48px;
}

.AuctionPage .information-block .secondary {
  color: var(--gray);
}

.AuctionPage .information-block .secondary .tooltip {
  top: -2px;
}

.AuctionPage .ui.label.pointing {
  border-radius: 6px !important;
}

.AuctionPage .information-block .ui.label.pointing {
  background: var(--gray);
  color: white;
  font-weight: normal;
  position: absolute;
  bottom: 90%;
  left: -60px;
  width: 190px;
  font-size: 1em;
  text-align: center;
  padding: 12px 30px;
  line-height: 20px;
}

.AuctionPage .information-block .close {
  position: absolute;
  top: 5px;
  right: 10px;
}

@media (max-width: 992px) {
  .AuctionPage .information-block,
  .AuctionPage .bid-wrapper {
    margin-top: 20px;
  }

  .AuctionPage .parcels-included {
    margin-top: 10px;
  }
}

@media (max-width: 768px) {
  .AuctionPage .ui.form {
    margin-bottom: 30px;
  }

  .AuctionPage .information-blocks {
    display: block;
    text-align: center;
  }

  .AuctionPage .information-block .ui.label.pointing {
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
  }

  .AuctionPage footer,
  .AuctionPage footer .available-parcels {
    display: block;
  }
}

